--- a/html/projekti.html
+++ b/html/projekti.html
@@ -67,9 +67,9 @@
 
 <body>
     <div>
-        <a href="arduino_krmiljenje_varilnega_aparata.html" target="_self" title="arduino krmiljenje varilnega aparata"  class="okno" style="background-color: rgb(0, 136, 255);">
+        <a href="arduino_krmiljenje_varilnega_aparata.html" target="_self" title="krmiljenje varilnega aparata"  class="okno" style="background-color: rgb(0, 136, 255);">
             <div>
-                <h3>Arduino krmiljenje varilnega aparata</h3>
+                <h3>Krmiljenje varilnega aparata</h3>
                 <div style="text-decoration: none;">
                     <span style="text-decoration: none;">        
                         <p style="text-decoration: none;">
