--- a/html/arduino_krmiljenje_varilnega_aparata.html
+++ b/html/arduino_krmiljenje_varilnega_aparata.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>arduino_krmiljenje_varilnega_aparata-Lovro7</title>
+    <title>krmiljenje_varilnega_aparata-Lovro7</title>
     <title>Projekti-Lovro7</title>
     <style>
         .desno_zgoraj{
@@ -61,8 +61,8 @@
     <a href="projekti.html" target=_self title="projekti">
         Projekti> 
     </a>
-    <a href="arduino_krmiljenje_varilnega_aparata.html" target=_self title="arduino krmiljenje varilnega aparata">
-        Arduino krmiljenje varilnega aparata
+    <a href="arduino_krmiljenje_varilnega_aparata.html" target=_self title="krmiljenje varilnega aparata">
+        Krmiljenje varilnega aparata
     </a>
     <hr>
     </div>
