--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Domača stran | Lovro7</title>
-    <meta name="description" content="Moja stran, kjer najdete podrobne opise mojih projektov z vsemi informacijami o samogradnji">
+    <meta name="description" content="Moja stran, kjer najdete podrobne opise mojih projektov z vsemi informacijami o samogradnji. Na forumih me najdete pod vzdevkom Lovro7">
     <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
